[metadata]
name = printree
version = 0.2.1
description = Pretty print python objects in a tree format.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pprint pformat ptree pretty print tree format formatting
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/chrizzFTD/printree
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:

[options.extras_require]
docs = sphinx_autodoc_typehints; sphinx_rtd_theme; m2r2
